# shiny

./: Cargo.toml  Dockerfile  MEDAL_LICENSE.txt  README.md  go.mod  main.go  render.yaml
.github/workflows/: release.yaml
ast/: Cargo.toml
ast/src/: formatter.rs  lib.rs  literal.rs
bot/: MoonsecDeobfuscator.sln  README.md
bot/src/Deobfuscation/: BytecodeDeobfuscator.cs  Context.cs  Deobfuscator.cs  OpCodes.cs
bot/src/Deobfuscation/Bytecode/: Deserializer.cs  Disassembler.cs  Serializer.cs
bot/src/Deobfuscation/Rewriters/: ConstantFolder.cs  ConstantReplacer.cs  ControlFlowSolver.cs  HandlerRewriter.cs
bot/src/Deobfuscation/Utils/: Extensions.cs  Matching.cs  StringDecoding.cs  TreeSolver.cs
bot/src/Deobfuscation/Walkers/: Analyzer.cs  FingerprintGenerator.cs  Renamer.cs  StringCollector.cs
bot/src/Syntax/: CstToAstVisitor.cs
bot/src/Syntax/Ast/: Block.cs  Node.cs  NodeList.cs  ParameterList.cs  PrettyPrinter.cs
bot/src/Syntax/Grammar/: Lua.g4
bot/src/Syntax/Parser/: LuaBaseVisitor.cs  LuaLexer.cs  LuaParser.cs  LuaVisitor.cs
cfg/src/: lib.rs
cfg/src/ssa/: inline.rs
lua51-deserializer/: Cargo.toml
lua51-lifter/: Cargo.toml
lua51-lifter/src/: lib.rs  main.rs
luau-lifter/: Cargo.toml
luau-lifter/src/: lifter.rs  op_code.rs
luau-lifter/src/deserializer/: bytecode.rs  function.rs
luau-worker/: wrangler.toml
medal/: Cargo.toml
medal/src/: main.rs
medal/src/commands/: decompile.rs  mod.rs  serve.rs
restructure/: Cargo.toml
restructure/src/: lib.rs
web-server/: Cargo.toml  README.md
web-server/src/: main.rs
(+47 files in other folders)
