[workspace]
resolver = "3"
members = [
    "cfg",
    "ast",
    "lua51-lifter",
    "lua51-deserializer",
    "luau-lifter",
    "restructure",
    "luau-worker",
    "medal",
]

[workspace.package]
edition = "2024"
authors = [
    "Mathias Pedersen <mathias.pedersen834@gmail.com>",
    "Jujhar Singh <jujharsmc@gmail.com>",
    "Amit Bashan <amit.bashan@icloud.com>",
    "Stefanuk12",
]

[profile.release]
debug = true
lto = true
# strip = true
# panic = "abort"
